<resources>
    <string name="app_name">YogaFitClass</string>
    <string name="headline"> Yoga Fit Class </string>
    <string name="tvName"> Ayşe Yılmaz </string>
    <string name="tvStatus"> Beginner, </string>
    <string name="tvResult"> Result </string>
    <string name="tvSignUp"> Sign Up </string>
    <string name="tvProgress"> My Progress </string>

    <string name="title_recycler"> # </string>

    <string-array name="yogas_title">
        <item>Baby Cobra</item>
        <item>Cat</item>
        <item> Chair </item>
        <item> Child </item>
        <item> Corpse </item>
        <item>  Cow </item>
        <item>  Downward </item>
        <item>  Easy Seat </item>
        <item> Half Seated </item>
        <item> Half Standing Fold </item>
        <item> Hero</item>
        <item> High lunge </item>
        <item> Locusi</item>
        <item> Low lunge </item>
        <item> Mountain</item>
        <item> Plank </item>
        <item> Tree </item>
        <item> Triangle</item>
        <item> Warrior </item>
        <item> Warrior II </item>
    </string-array>

    <string-array name="tvYogas">
        <item>Baby Cobra</item>
        <item>Cat</item>
        <item> Chair </item>
        <item> Child </item>
        <item> Corpse </item>
        <item>  Cow </item>
        <item>  Downward </item>
        <item>  Easy Seat </item>
        <item> Half Seated </item>
        <item> Half Standing Fold </item>
        <item> Hero</item>
        <item> High lunge </item>
        <item> Locusi</item>
        <item> Low lunge </item>
        <item> Mountain</item>
        <item> Plank </item>
        <item> Tree </item>
        <item> Triangle</item>
        <item> Warrior </item>
        <item> Warrior II </item>

    </string-array>

    <string name="exercise"> EXERCISE </string>
    <string name="settings"> SIGN UP </string>
    <string name="tvInfo"> Get learn about app </string>
    <string name="tvEvaluate"> Evaluate your progress today !</string>

    <string name="datatext"> DATABASE HERE</string>

    <string name="startBtn"> Start </string>
    <string name="resumeBtn"> Resume </string>
    <string name="pauseBtn"> Pause </string>

    <string name="todo"> Add any poses to ☰TODO LIST</string>
    <string name="username_exp"> Welcome, Ted Mosby</string>
    <string name="recTitle"> View all exercises</string>

    <string name="btn_txt">Display Notification</string>
    <string name="notification_txt">Here are the details for the notification...</string>

    <string name="tvGet"> Click for yoga images  </string>
    <string name="tvProgression"> See your progress &#11088;  </string>

    <string name="mailto"> kulozub@gmail.com </string>
    <string name="subject"> Subject </string>
    <string name="msg"> Message </string>
    
</resources>