<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="350dp"
        android:onClick="TxtClick"
        android:text="Sign Up"
        tools:text="@string/tvSignUp" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="198dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:onClick="onClick"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/started_yoga"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="131dp" />

    <RelativeLayout
        android:layout_width="421dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:foregroundGravity="center_vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnTodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#CD9EA1"
                android:onClick="CheckClick"
                app:srcCompat="@drawable/ic_baseline_playlist" />

        </TableRow>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnProgress"
            android:layout_width="156dp"
            android:layout_height="55dp"
            android:layout_marginLeft="130dp"
            android:backgroundTint="#CD9EA1"
            android:onClick="btnProgress"
            app:srcCompat="@drawable/ic_baseline_calendar_today_24" />

        <ImageButton
            android:id="@+id/btnInfo"
            android:layout_width="156dp"
            android:layout_height="55dp"
            android:layout_marginLeft="130dp"
            android:backgroundTint="#CD9EA1"
            android:onClick="btnInfo"
            app:srcCompat="@drawable/ic_baseline_info_24" />

        <ImageButton
            android:id="@+id/btnExercise"
            android:layout_width="156dp"
            android:layout_height="55dp"
            android:layout_marginLeft="130dp"
            app:srcCompat="@drawable/ic_baseline_image_24"
            android:backgroundTint="#CD9EA1"
            android:gravity="center"
            android:onClick="BtnExerciseClick"
            android:text="@string/exercise" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="280dp"
            android:layout_marginBottom="2dp"
            android:onClick="InfoClick"
            android:text="@string/tvInfo" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="118dp"
            android:text="Copyright ©2021 All rights reserved." />

    </LinearLayout>


</LinearLayout>